--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,8 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "volta": {
+    "node": "20.11.0"
   }
 }
