--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -10,6 +10,17 @@ Globals:
     Timeout: 30
     MemorySize: 128
 
+Parameters:
+  StageName:
+    Type: "String"
+    Default: "v1"
+  TweetsTableName:
+    Type: String
+    Default: "Tweets"
+  LogRetentionInDays:
+    Type: Number
+    Default: 1
+
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
