--- a/backend/tweet/Dockerfile
+++ b/backend/tweet/Dockerfile
@@ -7,3 +7,5 @@ FROM public.ecr.aws/lambda/python:3.9
 COPY tweet/requirements.txt ${LAMBDA_TASK_ROOT}/requirements.txt
 # requirements.txtから必要なライブラリをインストールします。
 RUN python3.9 -m pip install --no-cache-dir -r "${LAMBDA_TASK_ROOT}/requirements.txt" -t .
+
+COPY ./db/table.py ${LAMBDA_TASK_ROOT}/db/table.py
