feat: DynamoDBのquery共通メソッドを作成
 - Dockerfileに作成したutils.pyをLambda 関数コードへのパスへコピーする記述を追記

--- a/backend/tweet/Dockerfile
+++ b/backend/tweet/Dockerfile
@@ -9,3 +9,4 @@ COPY tweet/requirements.txt ${LAMBDA_TASK_ROOT}/requirements.txt
 RUN python3.9 -m pip install --no-cache-dir -r "${LAMBDA_TASK_ROOT}/requirements.txt" -t .
 
 COPY ./db/table.py ${LAMBDA_TASK_ROOT}/db/table.py
+COPY ./db/utils.py ${LAMBDA_TASK_ROOT}/db/utils.py
