feat: 画像アップロード処理のcloud watchの設定を追加

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -87,6 +87,7 @@ Resources:
         - Key: TwitterLikeSnsDeveloper
           Value: Green
 
+  # S3へ画像をアップロードする aws lambda
   GeneratePresignedUrlFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -115,6 +116,16 @@ Resources:
       Dockerfile: ./presigned_url/Dockerfile
       DockerContext: ./
       DockerTag: python3.9-v1
+
+  # 画像アップロード処理のcloud watchの設定
+  GeneratePresignedUrlLogGroup:
+  Type: AWS::Logs::LogGroup
+  Properties:
+    LogGroupName: !Sub /aws/lambda/${GeneratePresignedUrlFunction}
+    RetentionInDays: !Ref LogRetentionInDays
+    Tags:
+      - Key: TwitterLikeSnsDeveloper
+        Value: Green
 
   # DynamoDBを作成
   Tweets:
