--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -93,7 +93,7 @@ Resources:
     Properties:
       Policies:
         - S3CrudPolicy:
-            BucketName: twitter-like-storage
+            BucketName: twitter-app-storage
       PackageType: Image
       Events:
         GeneratePresignedUrl:
@@ -110,7 +110,7 @@ Resources:
             Method: post
       Environment:
         Variables:
-          S3_BUCKET_NAME: "twitter-like-storage"
+          S3_BUCKET_NAME: "twitter-app-storage"
           S3_ENDPOINT_URL: "https://s3.ap-northeast-1.amazonaws.com"
     Metadata:
       Dockerfile: ./presigned_url/Dockerfile
@@ -150,7 +150,7 @@ Resources:
   S3:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: twitter-like-storage
+      BucketName: twitter-app-storage
       VersioningConfiguration: # バージョニングを有効化
         Status: Enabled
       CorsConfiguration:
