--- a/backend/samconfig.toml
+++ b/backend/samconfig.toml
@@ -17,6 +17,10 @@ capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
 resolve_image_repos = true
+s3_prefix = "backend"
+region = "ap-northeast-1"
+disable_rollback = true
+parameter_overrides = "StageName=\"v1\" TweetsTableName=\"Tweets\" LogRetentionInDays=\"1\""
 
 [default.package.parameters]
 resolve_s3 = true
