feat: S3のリクエストURLを修正
 - vercelにデプロイ後のURLに修正

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -161,7 +161,7 @@ Resources:
               - PUT
               - GET
             AllowedOrigins:
-              - "https://twitter-clone.vercel.app" # vercelにデプロイ後に正しいURLに更新すること
+              - "https://twitter-clone-ryoutajs-projects.vercel.app/" # vercelにデプロイ後に正しいURLに更新すること
             MaxAge: 3000
 
 Outputs:
